--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
 
 
    <h2>HEALTH MAX NURSING CARE</h2>
+	    <button onclick="sharePage()">Share Page</button>
       
         <p>At Health Max Nursing Care, we extend a warm and compassionate welcome to you and your loved ones. Your well-being is at the heart of everything we do. As a dedicated nursing care center, we strive to provide exceptional healthcare services tailored to your unique needs.</p>
 
@@ -191,4 +192,32 @@
         margin-bottom: 20px;
     }
     <style>
+
+
+		<script>
+    function sharePage() {
+        var shareData = {
+            title: document.title,
+            url: window.location.href
+        };
+
+        if (navigator.share) {
+            // If Web Share API is supported, use it for sharing
+            navigator.share(shareData)
+                .then(function() {
+                    console.log('Sharing successful');
+                    alert('Sharing successful!');
+                })
+                .catch(function(error) {
+                    console.error('Error sharing:', error);
+                    alert('Sharing failed. Please try again.');
+                });
+        } else {
+            // Fallback for browsers that do not support Web Share API
+            // Here you can add social media share buttons or copy-to-clipboard functionality
+            console.log('Sharing not supported on this device.');
+            alert('Sharing not supported on this device. Please try using social media buttons or copy-to-clipboard functionality.');
+        }
+    }
+</script>
     	
